--- a/bert/SI/SI.ipynb
+++ b/bert/SI/SI.ipynb
@@ -97,8 +97,7 @@
     "        \"warmup_steps\": 0,\n",
     "        \"max_grad_norm\": 1.0,\n",
     "        \"gradient_accumulation_steps\": 1,\n",
-    "        \"save_steps\": 2000,\n",
-    "        \"overwrite_output_dir\": False}"
+    "        \"save_steps\": 2000}"
    ],
    "metadata": {
     "collapsed": false,
@@ -113,7 +112,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Preprocess"
+    "#### Data pre-processing"
    ],
    "metadata": {
     "collapsed": false
